[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/OptionsSections/OptionsControls.gd" type="Script" id=1]
[ext_resource path="res://GUI/ReBindSection/ActionsTopStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Fonts/m5x7_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/BindingPopup/Popup.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Hover.tres" type="StyleBox" id=5]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Focussed.tres" type="StyleBox" id=7]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Normal.tres" type="StyleBox" id=8]

[node name="Controls" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 1
script = ExtResource( 1 )

[node name="Section" type="Control" parent="."]
margin_right = 320.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Section"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Section/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 145.0
size_flags_horizontal = 3

[node name="ActionsSection" type="VBoxContainer" parent="Section/MarginContainer/ScrollContainer"]
margin_right = 310.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Button" type="Button" parent="Section/MarginContainer/ScrollContainer/ActionsSection"]
margin_right = 310.0
margin_bottom = 13.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Actions"

[node name="ScrollContainer" type="ScrollContainer" parent="Section/MarginContainer/ScrollContainer/ActionsSection"]
margin_top = 13.0
margin_right = 310.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="Section/MarginContainer/ScrollContainer/ActionsSection/ScrollContainer"]
margin_right = 310.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Popup" parent="Section" instance=ExtResource( 4 )]

[node name="Default" type="Button" parent="."]
margin_left = 140.0
margin_top = 149.0
margin_right = 179.0
margin_bottom = 164.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
text = "Default"

[node name="Back" type="Button" parent="."]
margin_left = 147.0
margin_top = 165.0
margin_right = 173.0
margin_bottom = 180.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
text = "BACK"
[connection signal="pressed" from="Default" to="." method="_on_Default_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
